have stopgap "fetching data" view implementation (waiting on a backend fix for a more robust one -- this just checks whether video title, description or thumb are null, and if so assumes these things are still being fetched)

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -177,3 +177,7 @@ facebook-img{
     right:2px;
     z-index:1;
 }
+
+.video-container{
+    margin-bottom: 30px;
+}
